--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
                     <type>pom</type>
                     <scope>import</scope>
                 </dependency>
+                <dependency>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                    <version>1.18.12</version>
+                </dependency>
+                <dependency>
+                    <groupId>cn.hutool</groupId>
+                    <artifactId>hutool-core</artifactId>
+                    <version>5.3.7</version>
+                </dependency>
             </dependencies>
     </dependencyManagement>
 
